--- a/style.css
+++ b/style.css
@@ -15,12 +15,92 @@
 
 body {
   font-family: 'Kumbh Sans', sans-serif;
+  background-color: var(--dark-cyan);
+  background-image: url(images/bg-pattern-top.svg);
+  background-size: cover;
+  background-position: -50vw -30vh;
+  background-repeat: no-repeat;
 }
 
-@media only screen (max-width: 375px) {
+@media only screen and (max-width: 550px) {
+.card {
+    background-color: #fff;
+    width: 350px;
+    height: 400px;
+    position: relative;
+    left: 20px;
+    top: 15vh;
+    border-radius: 20px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    z-index: 99;
+  }
 
+  .card .up>img {
+    width: 350px;
+    position: relative;
+    top: 0px;
+    border-radius: 20px 20px 0 0;
+  }
+
+  .card .profileCard {
+    background-color: #fff;
+    position: relative;
+    left: 32vw;
+    top: -5vh;
+    border-radius: 50%;
+    width: 103px;
+    height: 103px;
+  }
+
+  .card .profileCard>img {
+    position: absolute;
+    left: 0.9vw;
+    top: 0.5vh;
+    border-radius: 50%;
+  }
+
+  .card .down .name {
+    position: relative;
+    top: -2vh;
+    text-align: center;
+  }
+
+  .card .down #age {
+    font-weight: 400;
+    color: var(--dark-gray);
+    margin-left: 2vw;
+  }
+
+  .card .down .places {
+    line-height: 2.8;
+    text-align: center;
+    color: var(--dark-gray);
+  }
+
+  .card .down .followers, .likes, .photos {
+    display: inline-block;
+    text-align: center;
+    position: relative;
+    left: 3vh;
+    margin: 0 25px;
+    top: 3vh;
+    line-height: 1.4;
+  }
+
+  .card .down .followers>h3, .likes>h3, .photos>h3 {
+    font-size: 18px;
+  }
+
+  .card .down .followers>p, .likes>p, .photos>p {
+    font-weight: 400;
+    font-size: 10px;
+    letter-spacing: 2px;
+  }
 }
 
+
+
+/* 
 @media only screen (max-width: 1440px) {
-  
-}
+
+} */
