--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body {
   background-repeat: no-repeat;
 }
 
+@media only screen and (max-width: 1440px) {
+
+}
+
 @media only screen and (max-width: 420px) {
   .background {
     z-index: -99;
@@ -30,13 +34,20 @@ body {
     left: 30vw;
   }
 
+  .background img {
+    width: 300px;
+    height: 400px;
+    position: relative;
+    top: 50px;
+  }
+
 .card {
     background-color: #fff;
     width: 350px;
     height: 400px;
     position: relative;
-    left: 20px;
-    top: 15vh;
+    left: 30px;
+    top: 20vh;
     border-radius: 20px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     z-index: -99;
